# deco-calculator

./: .gitignore  README.md  home.yml  home_en.yaml  home_tr.yaml  plandive_tr.yaml  pyproject.toml  requirements.txt
app/: Home.py  __init__.py  _chart.py  _i18n.py  _local_store.py  _shared.py  store.py
app/pages/: 1_Plan_Dive.py  1_Planner.py  2_Dive_Series.py  2_Profiles.py  3_Profiles.py  4_About.py
docs/: VERIFICATION-CHECKLIST.md  spec.md
docs/research/: usn-rev7-reference.md
engine/: __init__.py  air.py  gas.py  heliox.py  lookup.py  nitrox.py  planner.py  repetitive.py  types.py  units.py
engine/tables/: SOURCES.md  air_deco_9-9.json  air_ndl_9-7.json  heliox_12-4.json  nitrox_ead_10-1.json  repetitive_9-8.json
tests/: test_air.py  test_heliox.py  test_nitrox_ead.py  test_repetitive.py
tests/fixtures/: air_cases.json
