[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deco-calculator"
version = "0.1.0"
description = "US Navy (Rev 7) decompression table calculator — academic prototype, table-lookup only."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "streamlit>=1.32",
    "altair>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["engine", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
